--- a/.github/workflows/compilar.yml
+++ b/.github/workflows/compilar.yml
@@ -1,8 +1,6 @@
-name: Gerar Release Automático
+name: Compilar NigType-OS
 
-on:
-  push:
-    branches: [ main ] # Ou 'master', dependendo da tua branch
+on: [push]
 
 jobs:
   build:
@@ -10,17 +8,29 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Instalar NASM
-        run: sudo apt-get install -y nasm
+      - name: Instalar Compiladores
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y nasm gcc g++ binutils
 
-      - name: Compilar NigType-OS
-        run: nasm -f bin boot.asm -o nigtype.img
+      - name: Compilar Tudo
+        run: |
+          # 1. Compila o Assembly (agora como elf32 para aceitar símbolos)
+          nasm -f elf32 boot.asm -o boot.o
+          
+          # 2. Compila os arquivos C e C++ da pasta kernel
+          gcc -m32 -c kernel/system.c -o system.o
+          gcc -m32 -c kernel/idt.c -o idt.o
+          gcc -m32 -c kernel/bootlog.c -o bootlog.o
+          g++ -m32 -c kernel/main.cpp -o main.o
+          g++ -m32 -c kernel/kernel_core.cpp -o kernel_core.o
+          
+          # 3. Junta tudo (Linking)
+          # O -Ttext 0x100000 é o padrão para kernels Multiboot
+          ld -m elf_i386 -Ttext 0x100000 boot.o system.o idt.o bootlog.o main.o kernel_core.o -o nigtype.bin
 
-      - name: Criar Release
-        uses: softprops/action-gh-release@v1
+      - name: Upload do Resultado
+        uses: actions/upload-artifact@v4
         with:
-          tag_name: v0.1.0-alpha
-          name: Release v0.1.0-alpha "Genesis"
-          files: nigtype.img
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          name: NigType-OS-Binary
+          path: nigtype.bin
