--- a/.github/workflows/compilar.yml
+++ b/.github/workflows/compilar.yml
@@ -1,16 +1,37 @@
-- name: Compilar Tudo
+name: Compilar NigType-OS
+
+on: [push]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Instalar Compiladores
         run: |
-          # 1. Assembly
+          sudo apt-get update
+          sudo apt-get install -y nasm gcc g++ binutils
+
+      - name: Compilar Tudo
+        run: |
+          # 1. Compilar o Assembly como ELF (O segredo para aceitar símbolos)
           nasm -f elf32 boot.asm -o boot.o
           
-          # 2. Compilar C (Dizendo que os headers estão na pasta include)
+          # 2. Compilar os arquivos C
           gcc -m32 -c kernel/system.c -Iinclude -o system.o
           gcc -m32 -c kernel/idt.c -Iinclude -o idt.o
           gcc -m32 -c kernel/bootlog.c -Iinclude -o bootlog.o
           
-          # 3. Compilar C++
+          # 3. Compilar os arquivos C++
           g++ -m32 -c kernel/main.cpp -Iinclude -o main.o
           g++ -m32 -c kernel/kernel_core.cpp -Iinclude -o kernel_core.o
           
-          # 4. Linker (Soldagem final)
+          # 4. Linker (Junta tudo no binário final do Kernel)
           ld -m elf_i386 -Ttext 0x100000 boot.o system.o idt.o bootlog.o main.o kernel_core.o -o nigtype.bin
+
+      - name: Upload do Kernel
+        uses: actions/upload-artifact@v4
+        with:
+          name: NigType-Kernel-Binario
+          path: nigtype.bin
