--- a/.github/workflows/compilar.yml
+++ b/.github/workflows/compilar.yml
@@ -15,23 +15,17 @@ jobs:
 
       - name: Compilar Tudo
         run: |
-          # 1. Compilar o Assembly como ELF (O segredo para aceitar símbolos)
+          # 1. Assembly (ELF32 para aceitar os símbolos)
           nasm -f elf32 boot.asm -o boot.o
           
-          # 2. Compilar os arquivos C
-          gcc -m32 -c kernel/system.c -Iinclude -o system.o
-          gcc -m32 -c kernel/idt.c -Iinclude -o idt.o
-          gcc -m32 -c kernel/bootlog.c -Iinclude -o bootlog.o
+          # 2. Compilar C (O -I${{ github.workspace }}/include força o caminho real)
+          gcc -m32 -c kernel/system.c -I${{ github.workspace }}/include -o system.o
+          gcc -m32 -c kernel/idt.c -I${{ github.workspace }}/include -o idt.o
+          gcc -m32 -c kernel/bootlog.c -I${{ github.workspace }}/include -o bootlog.o
           
-          # 3. Compilar os arquivos C++
-          g++ -m32 -c kernel/main.cpp -Iinclude -o main.o
-          g++ -m32 -c kernel/kernel_core.cpp -Iinclude -o kernel_core.o
+          # 3. Compilar C++
+          g++ -m32 -c kernel/main.cpp -I${{ github.workspace }}/include -o main.o
+          g++ -m32 -c kernel/kernel_core.cpp -I${{ github.workspace }}/include -o kernel_core.o
           
-          # 4. Linker (Junta tudo no binário final do Kernel)
+          # 4. Linker
           ld -m elf_i386 -Ttext 0x100000 boot.o system.o idt.o bootlog.o main.o kernel_core.o -o nigtype.bin
-
-      - name: Upload do Kernel
-        uses: actions/upload-artifact@v4
-        with:
-          name: NigType-Kernel-Binario
-          path: nigtype.bin
