--- a/.github/workflows/compilar.yml
+++ b/.github/workflows/compilar.yml
@@ -13,35 +13,27 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y nasm gcc g++ binutils
 
-      - name: Compilar Tudo
+     - name: Compilar Tudo
         run: |
-          # 1. Copia os arquivos reais
-          cp kernel/*.c .
-          cp kernel/*.cpp .
-          cp include/gui.hpp .
-          cp include/nigtype.h .
+          # 1. Criar a estrutura que o código espera
+          mkdir -p include
+          cp include/gui.hpp include/
+          cp include/nigtype.h include/
           
-          # 2. Compila o Boot
+          # 2. Compilar o Boot
           nasm -f elf32 boot.asm -o boot.o
           
-          # 3. Compila C
-          gcc -m32 -c system.c -I. -o system.o
-          gcc -m32 -c idt.c -I. -o idt.o
-          gcc -m32 -c bootlog.c -I. -o bootlog.o
+          # 3. Compilar C (Mantendo os arquivos nas pastas originais)
+          gcc -m32 -c kernel/system.c -Iinclude -o system.o
+          gcc -m32 -c kernel/idt.c -Iinclude -o idt.o
+          gcc -m32 -c kernel/bootlog.c -Iinclude -o bootlog.o
           
           # 4. Compila o Core (As 8 linhas)
-          g++ -m32 -c kernel_core.cpp -o kernel_core.o
+          g++ -m32 -c kernel/kernel_core.cpp -Iinclude -o kernel_core.o
           
           # 5. Compila o Main (O Setup)
-          g++ -m32 -c main.cpp -I. -o main.o
+          g++ -m32 -c kernel/main.cpp -Iinclude -o main.o
           
-          # 6. Linker (A hora da verdade!)
+          # 6. Linker (Junta tudo)
           ld -m elf_i386 -Ttext 0x100000 boot.o system.o idt.o bootlog.o main.o kernel_core.o -o nigtype.bin
-
-      - name: Upload do Kernel
-        uses: actions/upload-artifact@v4
-        with:
-          name: NigType-Kernel-Binario
-          path: nigtype.bin
-
-          
+        
