--- a/.github/workflows/compilar.yml
+++ b/.github/workflows/compilar.yml
@@ -13,27 +13,27 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y nasm gcc g++ binutils
 
-     - name: Compilar Tudo
+      - name: Compilar Tudo
         run: |
-          # 1. Criar a estrutura que o código espera
-          mkdir -p include
-          cp include/gui.hpp include/
-          cp include/nigtype.h include/
-          
-          # 2. Compilar o Boot
+          # Compilando o Boot
           nasm -f elf32 boot.asm -o boot.o
           
-          # 3. Compilar C (Mantendo os arquivos nas pastas originais)
+          # Compilando os arquivos C (O -Iinclude ajuda a achar o nigtype.h)
           gcc -m32 -c kernel/system.c -Iinclude -o system.o
           gcc -m32 -c kernel/idt.c -Iinclude -o idt.o
           gcc -m32 -c kernel/bootlog.c -Iinclude -o bootlog.o
           
-          # 4. Compila o Core (As 8 linhas)
+          # Compilando o Core (Suas 8 linhas de código)
           g++ -m32 -c kernel/kernel_core.cpp -Iinclude -o kernel_core.o
           
-          # 5. Compila o Main (O Setup)
+          # Compilando o Main (A tela de instalação)
           g++ -m32 -c kernel/main.cpp -Iinclude -o main.o
           
-          # 6. Linker (Junta tudo)
+          # Linker final
           ld -m elf_i386 -Ttext 0x100000 boot.o system.o idt.o bootlog.o main.o kernel_core.o -o nigtype.bin
-        
+
+      - name: Upload do Kernel
+        uses: actions/upload-artifact@v4
+        with:
+          name: NigType-Kernel-Binario
+          path: nigtype.bin
